# paper-shift-benchmark

./: README.md  pdf_to_md.py  pyproject.toml
src/paper_shift_benchmark/: __init__.py  cli.py
