[project]
name = "paper-shift-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Suganya", email = "satish860@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
paper-shift-benchmark = "paper_shift_benchmark:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
